--- a/WMTippApp/Views/Shared/_Layout.cshtml
+++ b/WMTippApp/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
         <header id="layoutHeader">
             <div class="content-wrapper">
                 <div class="float-left">
-                    <p class="site-title">@Html.ActionLink("EURO-Tippspiel", "Index", "Home")</p>
+                    <p class="site-title">@Html.ActionLink("WM-Tippspiel", "Index", "Home")</p>
                 </div>
                 <div class="float-right">
                     <section id="login">
