--- a/WMTippApp/Views/Home/About.cshtml
+++ b/WMTippApp/Views/Home/About.cshtml
@@ -16,10 +16,14 @@
                 <li><i>Achtelfinale:</i> Der Einsatz wird auf 2 Einheiten pro Spiel erhöht.</li>
                 <li><i>Viertelfinale:</i> Der Einsatz wird auf 4 Einheiten pro Spiel erhöht.</li>
                 <li><i>Halbfinale:</i> Der Einsatz wird auf 6 Einheiten pro Spiel erhöht.</li>
-                <li><i>Finale:</i> Der Einsatz wird auf 10 Einheiten pro Spiel erhöht.</li>
+                <li><i>Platz 3/Finale:</i> Der Einsatz wird auf 8 Einheiten pro Spiel erhöht.</li>
             </ul>
 
             <p>Gewinner ist, wer am Ende die meisten Punkte gesammelt hat.</p>
+            
+            <h3>Wetteinsatz</h3>
+            Jeder Mitspieler zahlt 25.- CHF ein.
+
         </div>
         <div class="eight columns">
             <h3>Wertung während der K.O.-Runden</h3>
@@ -27,8 +31,13 @@
             Wir wenden die gleiche Regel an wie die Wettbüro, welche die Quoten stellen: Gewertet wird das Spiel nach der regulären Spielzeit.
             Verlängerung oder Elfmeterschiessen haben keinen Einfluss. Dadurch sind auch während den K.O.-Spielen Unentschieden möglich.
 
-            <h3>Wetteinsatz</h3>
-             Jeder Mitspiel zahlt 20.- CHF ein und - the winner takes it all bzw. darf ruhig die Rechnung beim nächsten BuLi-Barbesuch übernehmen.
+            <h3>Der Verteilschlüssel</h3>
+            Die Summe der Einsätze wird wie folgt ausgeschüttet:
+            <ul>
+                <li><i>bis 5 Tipper: </i>Platz 2 zahlt 25.-, der Gewinner erhält den Rest</li>
+                <li><i>bis 10 Tipper: </i>Platz 3 zahlt 25.-, Platz 2 zahlt 50.- und der Gewinner erhält den Rest</li>
+                <li><i>mehr als 10 Tipper: </i>Platz 3 zahlt 50.-, Platz 2 zahlt 100.- und der Gewinner erhält den Rest</li>
+            </ul>
         </div>
     </div>
 </article>
